--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,11 @@
 # production
 /build
 
-# misc
+#config
 /.vscode
+
+# misc
+
 .DS_Store
 .env.local
 .env.development.local
@@ -22,3 +25,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/package-lock.json
+/package.json
+/prettierrc.json
+/.eslintrc.js
+/src/setupTests.js
